# claude-code-tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: extract_claude_logs.py  realtime_search.py  search_cli.py
src/claude_code_tracker/: __init__.py  cli.py
src/claude_code_tracker/core/: __init__.py  extractor.py
src/claude_code_tracker/search/: __init__.py  realtime.py  searcher.py
src/claude_code_tracker/ui/: __init__.py  interactive.py
tests/: test_error_handling.py  test_realtime_search_comprehensive.py  test_realtime_search_coverage.py  test_realtime_search_integration.py  test_search.py  test_search_integration.py
