[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-tracker"
version = "0.1.0"
description = "Knowledge management for Claude Code - extract decisions, track progress, generate reports from conversations"
readme = "README.md"
authors = [
    {name = "r2d2Pair"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = [
    "claude-code", "conversation-tracker", "decision-tracking",
    "knowledge-management", "progress-reports", "work-logs"
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/r2d2Pair/claude-code-tracker"
Repository = "https://github.com/r2d2Pair/claude-code-tracker"
Issues = "https://github.com/r2d2Pair/claude-code-tracker/issues"

[project.scripts]
claude-code-tracker = "claude_code_tracker.cli:launch_interactive"
cct = "claude_code_tracker.cli:launch_interactive"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_code_tracker", "claude_code_tracker.*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
